tests/contract_testcases/polkadot/functions/global_functions_04.sol

        function x() feyla {}
        
// ---- Expect: diagnostics ----
// error: 2:22-27: function modifiers or base contracts are only allowed on functions in contracts
